# spin-ats

./: manip.md  pyproject.toml
libs/: helpers.py
libs/dc_controller/: dc_controller.py
libs/pulses/: Builder.py  ShapeCompensation.py  Shapes.py
libs/utils/: file_saving.py  functions.py  plots.py  spin_fit_analysis.py
libs/videomode/: ScientificSpinBox.py  tools.py  videomode.py
parameters/: params.py
parameters/tensions_dc/: all_zero.json  proche_double_dot.json  proche_simple_dot.json  test_grilles_dots.json  voltages.json
procedures/: mesure_rf.py  tuning_dc.py
