[project]
name = "spin-ats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.39.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pyhegel",
    "pyqt5>=5.15.11",
    "pytz>=2026.2",
    "pyvisa>=1.16.2",
    "scipy>=1.15.3",
]

[tool.uv.sources]
pyhegel = { path = "../pyHegel", editable = true }
